--- a/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
+++ b/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
@@ -1,6 +1,6 @@
-[[Sun|ᏅᏓ]] ᎠᏰᎵ '''solar ᎢᏯᏛᏁᎵᏓᏍᏗ'''. ᎣᎦᏤᎵ solar ᎢᏯᏛᏁᎵᏓᏍᏗ ᏣᏁᎳ [[planet]]s ᎠᎴ ᏌᏊ [[dwarf planet|ᎤᏍᏗ planet]]: [[Pluto|ᏐᏁᎵᏁ]].<ref>Safire, William. [http://query.nytimes.com/gst/fullpage.html?res=9F02E7DC1631F933A2575AC0A9609C8B63&ref=pluto_planet "The Way We Live Now: 9-10-06: ᎧᏬᏂᎯᏍᏗ-Ꮒ: ᎤᏍᏗ Planet."] ''[[New York Times|ᏄᏯᎩ ᎢᏧᏩᎪᏗ]]''. 10 ᏚᎵᏍᏗ 2006 (12 ᏅᏓᏕᏆ 2010)</ref>
+[[Sun|ᏅᏓ]] ᎠᏰᎵ '''ᏅᏓ ᎠᎴ ᏚᏓᏕᏫᏍᏛ'''. ᎣᎦᏤᎵ solar ᎢᏯᏛᏁᎵᏓᏍᏗ ᏣᏁᎳ [[planets|ᏤᎶᎯ]] ᎠᎴ ᏌᏊ [[dwarf planet|ᎤᏍᏗ ᏤᎶᎯ]]: [[Pluto|ᏐᏁᎵᏁ]].<ref>Safire, William. [http://query.nytimes.com/gst/fullpage.html?res=9F02E7DC1631F933A2575AC0A9609C8B63&ref=pluto_planet "The Way We Live Now: 9-10-06: ᎧᏬᏂᎯᏍᏗ-Ꮒ: ᎤᏍᏗ Planet."] ''[[New York Times|ᏄᏯᎩ ᎢᏧᏩᎪᏗ]]''. 10 ᏚᎵᏍᏗ 2006 (12 ᏅᏓᏕᏆ 2010)</ref>
 
-==Ꮎ ᏟᏁᎳ Planets==
+==Ꮎ ᏟᏁᎳ ᏤᎶᎯ==
 [[File:Planete2008.jpg|right|400px]]
 #[[Mercury|ᎹᏓᎵ]]
 #[[Venus|ᎠᎾᏂᏍᏓᎾᎵ]]
