--- a/ᏧᏴᏢ_ᏗᎧᎸ_ᏃᏈᏏ.mw
+++ b/ᏧᏴᏢ_ᏗᎧᎸ_ᏃᏈᏏ.mw
@@ -1,12 +1,63 @@
-ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ ᏭᎵᏍᎨᏗᏴ ᏃᏈᏏ. ᎯᎠᎾ ᏃᏈᏏ
-ᏭᏍᎪᏛ ᏃᏈᏏ ᏚᏙᎠ. ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ ᎠᏃᏎᎰ ᏥᏳᎪᏗᎮᏃ
-ᎦᎸᎳᏗᏜ ᏧᏴᏢ ᏗᎨᏛ ᎠᏘᏍᏗᏍᎪᎢ.
-ᏧᏕᏘᏴᏓ ᎾᎾᏗᏍᎪ ᎠᏂᏴᏫ ᏍᎩᎮᏃ ᎧᏃᎮᏍᎪ ᎤᎿᏗᏜ
-ᏫᎦᎶᎯᏍᏗ ᏒᏃᏱᎩ ᏂᎪᎸᎮ ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ ᎤᎿᏭ ᏄᏛᏃ
-ᎦᎸᎶᎯ.
-ᏧᏴᏢ ᏗᎨᏛ ᏰᏙᎭ, ᏥᏳᎪᏗ ᎦᎸᎳᏗᏜ ᎧᎶᎢ ᏧᏴᏢ ᎡᎯ
-ᏃᏈᏏ. ᏧᎦᏃᏮᏗᏜ ᏱᏣᏂᎩᏌ, ᎡᎳᏗᎨᎮᏃ ᎦᎸᎶ ᎧᎶ
-ᏂᎬᏫᏍᏙᎢ. ᎡᎶᎯ ᎠᏰᏟ ᏧᏴᏢᏗᏜ ᎠᏁ ᎠᏂᏴᏫ ᎠᏂᎪᏩᏘᏍᎪ
-ᏧᏴᏢ ᏗᎧᎳ ᏃᏈᏏ.
-ᏭᏍᎪᏍᏛ ᏃᏈᏏ ᎤᏠᏱᏭ ᏂᎦᏓ ᏃᏈᏏ ᏂᎪᎸ ᎠᎢᏐᎢ. ᏄᏓᎴ
-ᏃᏈᏏ ᏗᎧᎴᏍᏗ ᏧᏴᏢ ᏂᎸᏍᎩ ᎩᎦᏴᎵ ᎾᏕᏘᏴᎲ.
+[[File:North pole path.png|thumb|300px|ᏧᏴᏢ ᎠᏓ ᏃᏈᏏ [[path|ᏅᏃᎯ]]]]
+ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ (ᎦᏅᎯᏓ ᎠᏓ ᏃᏈᏏ '''Polaris'''-Ꭸ) ᏭᎵᏍᎨᏗᏴ [[ᏃᏈᏏ]]. ᎯᎠᎾ ᏃᏈᏏ ᏭᏍᎪᏛ ᏃᏈᏏ ᏚᏙᎠ. ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ ᎠᏃᏎᎰ ᏥᏳᎪᏗᎮᏃ ᎦᎸᎳᏗᏜ ᏧᏴᏢ ᏗᎨᏛ ᎠᏘᏍᏗᏍᎪᎢ. ᏧᏕᏘᏴᏓ ᎾᎾᏗᏍᎪ [[ᎠᏂᏴᏫ]] ᏍᎩᎮᏃ ᎧᏃᎮᏍᎪ ᎤᎿᏗᏜ ᏫᎦᎶᎯᏍᏗ ᏒᏃᏱᎩ ᏂᎪᎸᎮ ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ ᎤᎿᏭ ᏄᏛᏃ ᎦᎸᎶᎯ.
+
+ᏧᏴᏢ ᏗᎨᏛ ᏰᏙᎭ, ᏥᏳᎪᏗ ᎦᎸᎳᏗᏜ ᎧᎶᎢ ᏧᏴᏢ ᎡᎯ ᏃᏈᏏ. ᏧᎦᏃᏮᏗᏜ ᏱᏣᏂᎩᏌ, ᎡᎳᏗᎨᎮᏃ ᎦᎸᎶ ᎧᎶ ᏂᎬᏫᏍᏙᎢ. [[ᎡᎶᎯ]] ᎠᏰᏟ ᏧᏴᏢᏗᏜ ᎠᏁ ᎠᏂᏴᏫ ᎠᏂᎪᏩᏘᏍᎪ ᏧᏴᏢ ᏗᎧᎳ ᏃᏈᏏ.
+
+ᏭᏍᎪᏍᏛ ᏃᏈᏏ ᎤᏠᏱᏭ ᏂᎦᏓ ᏃᏈᏏ ᏂᎪᎸ ᎠᎢᏐᎢ. ᏄᏓᎴ ᏃᏈᏏ ᏗᎧᎴᏍᏗ ᏧᏴᏢ ᏂᎸᏍᎩ ᎩᎦᏴᎵ ᎾᏕᏘᏴᎲ.
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commons|Polaris}}
+::*[http://www-istp.gsfc.nasa.gov/stargaze/Spolaris.htm ᎥᏩᏘᏍᎬ Ꮎ ᎦᏅᎯᏓ ᎠᏓ ᏃᏈᏏ], NASA
+::* [http://astro2.byu.edu/~sdb/Astrophotos/GuidingLights.html Star trails around Polaris]
+
+[[Category: ᏗᎦᎸᎳᏗ]]
+
+[[ar:نجم الشمال]]
+[[be:Палярная зорка]]
+[[bg:Полярна звезда (Малка мечка)]]
+[[ca:Estel del Nord]]
+[[cs:Polárka]]
+[[da:Nordstjernen]]
+[[de:Polarstern]]
+[[et:Põhjanael]]
+[[en:Polaris]]
+[[el:Πολικός Αστέρας]]
+[[es:Polaris (estrella)]]
+[[eo:Norda Stelo]]
+[[fa:ستاره قطبی]]
+[[fr:Alpha Ursae Minoris]]
+[[fur:Stele tramontane]]
+[[ko:폴라리스]]
+[[hr:Sjevernjača]]
+[[id:Polaris]]
+[[os:Арвы цæджындз]]
+[[it:Polaris]]
+[[he:כוכב הצפון]]
+[[csb:Nordowô gwiôzda]]
+[[kv:Юрйыв кодзув]]
+[[lv:Polārzvaigzne]]
+[[lt:Šiaurinė]]
+[[hu:Sarkcsillag]]
+[[mk:Поларис]]
+[[mg:Kintan'ny tendron-tany avaratra]]
+[[nl:Polaris]]
+[[ja:ポラリス (恒星)]]
+[[no:Nordstjernen]]
+[[oc:Alpha Ursae Minoris]]
+[[pl:Alfa Ursae Minoris]]
+[[pt:Polaris]]
+[[ro:Steaua polară]]
+[[ru:Полярная звезда]]
+[[sah:Хотугу сулус]]
+[[simple:Polaris (star)]]
+[[sk:Polárka]]
+[[sl:Severnica]]
+[[fi:Pohjantähti]]
+[[sv:Polstjärnan]]
+[[th:ดาวเหนือ]]
+[[tr:Kutup Yıldızı]]
+[[uk:Полярна зірка]]
+[[ur:قطبی ستارہ]]
+[[vi:Polaris]]
+[[zh-yue:勾陳一]]
+[[zh:勾陳一]]
