/* ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ */ update cat

--- a/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
+++ b/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
@@ -19,5 +19,4 @@
 ::*[http://science.nationalgeographic.com/science/space/solar-system Solar ᎢᏯᏛᏁᎵᏓᏍᏗ], ᎬᎾᏕᎾ Geographic
 ::*[http://solarsystem.nasa.gov/index.cfm Solar ᎢᏯᏛᏁᎵᏓᏍᏗ Exploration], NASA
 
-[[Category:ᎠᎦᏙᎲᏍᏗ]]
-[[Category:ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
+[[Category:ᏗᎦᎸᎳᏗ]]
