/* ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ */ c/e

--- a/ᏃᏈᏏ.mw
+++ b/ᏃᏈᏏ.mw
@@ -143,32 +143,14 @@ Astronomers ᎠᎦᏎᏍᏙᏗ Ꮎ ᎾᎿᎢ ᎠᎴ ᎾᎾᎢ least 70 [[sextill
 * [[Cliff Pickover]] (2001) "ᎯᎠ ᎠᏂᏃᏈᏏ ᎦᎸᎳᏗ ᏦᏒ", Oxford University ᏗᏂᎴᏱᏗᏍᎩ
 * [[John Gribbin]], Mary Gribbin (2001) "Stardust: Supernovae ᎠᎴ ᎥᎴᏂᏙᎲ — ᎯᎠ Cosmic ᏗᎵᎪᏔᏅᎯ", Yale University ᏗᏂᎴᏱᏗᏍᎩ.
 
-== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-
+== ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ ==
+* [[North Star|ᏧᏴᏢ ᏗᎧᎸ ᏃᏈᏏ]]
+* [[Solar system|ᏅᏓ ᎠᎴ ᏚᏓᏕᏫᏍᏛ]]
 * [[Black hole|ᎬᎿᎨ ᎠᏔᎴᏒ]]
-* [[Blue straggler|ᏌᎪᏂᎨ straggler]]
-* [[Constellation|Overview  ᏃᏈᏏ constellations]] 
-* [[Nursery rhyme]] ''[[Twinkle twinkle little star|Twinkle twinkle ᎤᏍᏗ ᏃᏈᏏ]]''
-* [[sidereal clock|sidereal ᏩᏥ]]
 * [[Star count|ᏃᏈᏏ ᏗᏎᏍᏗ]]
 * [[Star clock|ᏃᏈᏏ ᏩᏥ]]
-* [[List of stars|ᎠᏂᏃᏈᏏ ᎬᏙᏗ ᏚᏓᏡᎬ ᎭᏫᎾᏗᏢ Wikipedia]]
+* [[List of stars|ᎠᏂᏃᏈᏏ ᎬᏙᏗ ᏚᏓᏡᎬ ᎭᏫᎾᏗᏢ ᏙᎪᏪᎸ]]
 * [[Stellar navigation|Stellar ᎠᏂᎩᏍᏗ ᏥᏳ]]
-* [[Stellar evolution]]
-* [[Timeline of stellar astronomy|Timeline  stellar astronomy]]
-* [[Variable star|Variable ᏃᏈᏏ]]
-
-=== ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ lists ===
-
-* [[Lists of stars|Lists  ᎠᏂᏃᏈᏏ]]
-* [[List of brightest stars|ᏙᎪᏩᎸ  brightest ᎠᏂᏃᏈᏏ (ᎬᎪᏩᏛᏗ & ᎤᏙᎯᏳᎯᏯ magnitude)]]
-* [[List of heaviest stars|ᏙᎪᏩᎸ  heaviest ᎠᏂᏃᏈᏏ (ᎾᎥᎢ solar ᎦᏟᏌᏅ ᎤᎪᏗᏗ)]]
-* [[List of largest stars|ᏙᎪᏩᎸ  ᎤᏔᏂᎢᏍᏗ ᎠᏂᏃᏈᏏ (ᎾᎥᎢ ᎠᏰᎵ ᎠᏍᏓᏅᏅ)]]
-* [[List of mnemonics for star classification|ᏙᎪᏩᎸ  mnemonics ᎾᏍᎩᎾᎢ ᏃᏈᏏ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]]
-* [[List of nearest bright stars|ᏙᎪᏩᎸ  ᎾᎥᏂᎨᏍᏙᏗ ᏧᎸᏌᏓ ᎠᏂᏃᏈᏏ]]
-* [[List of nearest stars|ᏙᎪᏩᎸ  ᎾᎥᏂᎨᏍᏙᏗ ᎠᏂᏃᏈᏏ]]
-* [[List of stars by constellation|ᏙᎪᏩᎸ  ᎠᏂᏃᏈᏏ ᎾᎥᎢ constellation]]
-* [[List of stars with confirmed extrasolar planets|ᏙᎪᏩᎸ  ᎠᏂᏃᏈᏏ ᎬᏙᏗ ᎦᎫᏍᏛᏅᎯ extrasolar planets]]
 
 == External ᏗᏕᎬᏔᏛ ==
 
