--- a/ᎠᏙᎯ_ᎢᎾᎨ.mw
+++ b/ᎠᏙᎯ_ᎢᎾᎨ.mw
@@ -3,7 +3,7 @@
 [[File:A_deciduous_beech_forest_in_Slovenia.jpg|thumb|right|250px| decidous broadleaf ([[Beech|ᎤᏙᎳᏂ]]) ᎠᏙᎯ ᎢᎾᎨ ᎭᏫᎾᏗᏢ [[Slovenia]].]]
 [[File:Anjajavy forest meets sea.jpg|thumb|right|250px|ᏗᎧᏃᏗᎢ ᎥᏓᎵ ᏂᏛᎴᏅᏓ ᎭᏫᏂᏗᏢ ᎠᏙᎯ ᎢᎾᎨ.]]
 [[File:Listí na hrázi rybníka.JPG|thumb|250px|[[Maple|ᏢᏩᎦ]] ᎠᎴ [[Oak|ᏧᏍᎦ]] ᎤᎦᎶᎦ]]
-'''ᎠᏙᎯ ᎢᎾᎨ''' ᎨᏒᎢ ᎡᏍᎦᏂ ᎬᏙᏗ ᎦᎸᎳᏗ ᎠᏫᏒᏗ [[tree|ᏡᎬ]] (ᎠᎴ, ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ, ᎦᏅᏙᎬ ᎡᏍᎦᏂ ᎠᏫᏒᏗ ᎤᏤᎵᏛ ᎾᏍᎩᎾᎢ [[hunting|ᎠᏂᏃᎯᎵᏙᎲ]]). ᎤᏙᎯᏳᎯᏯ, ᎤᎪᏗᏗ ᏩᏎᏍᏗ ᎾᎿ ᎠᏙᎯ ᎢᎾᎨ ᎬᏂᎨᏒ ᏄᏍᏗ <ref>Lund, H. Gyde (coord.) 2006. ‘Definitions ᎠᏙᎯ ᎢᎾᎨ, Deforestation, Afforestation, ᎠᎴ Reforestation'. Gainesville, VA: ᎠᏙᎯ ᎢᎾᎨ ᎠᏓᏃᎯᏎᏗ ᎾᎾᏛᏁᎲ. ᏰᎵ ᎠᏩᏛᏗ ᏂᏛᎴᏅᏓ : http://ᎣᏪᏅᏒ.comcast.ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ/~gyde/DEFpaper.htm</ref>. ᎾᏍᎩ ᎯᎠ ᎦᎪᏘ ᎾᎥ ᏄᎾᏓᎸ ᎫᏢᏗ ᎡᏆ ᎡᏍᎦᏂ ᎯᎠ ᎡᎶᎯ ᎢᎬᎾᏕᎾ ᎠᎴ ᎤᏯᎾᏛᏁᏗ ᏥᏄᏍᏗ [[carbon dioxide sink|ᎤᎦᏔ ᏅᏓᏳᏓᎴᏅ ᏬᏗᎨ dioxide ᎡᎳᏗ ᎢᎦᎵᏍᏙᏗ]], ᎦᏂᏝᎢ [[habitat (ecology)|ᏗᎦᎶᎪᏗ]], [[hydrologic cycle|hydrologic ᎠᏕᏴᎠᏍᎬ]] [[modulator]], ᎠᎴ [[soil|ᎦᏙᎯ]] conservers, ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎢᎦᏛ ᎯᎠ [[Earth|ᎡᎶᎯ]] ᎤᏤᎵ [[biosphere]].
+'''ᎠᏙᎯ ᎢᎾᎨ''' ᎨᏒᎢ ᎡᏍᎦᏂ ᎬᏙᏗ ᎦᎸᎳᏗ ᎠᏫᏒᏗ [[tree|ᏡᎬ]] (ᎠᎴ, ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ, ᎦᏅᏙᎬ ᎡᏍᎦᏂ ᎠᏫᏒᏗ ᎤᏤᎵᏛ ᎾᏍᎩᎾᎢ [[hunting|ᎠᏂᏃᎯᎵᏙᎲ]]). ᎤᏙᎯᏳᎯᏯ, ᎤᎪᏗᏗ ᏩᏎᏍᏗ ᎾᎿ ᎠᏙᎯ ᎢᎾᎨ ᎬᏂᎨᏒ ᏄᏍᏗ <ref>Lund, H. Gyde (coord.) 2006. ‘Definitions ᎠᏙᎯ ᎢᎾᎨ, Deforestation, Afforestation, ᎠᎴ Reforestation'. Gainesville, VA: ᎠᏙᎯ ᎢᎾᎨ ᎠᏓᏃᎯᏎᏗ ᎾᎾᏛᏁᎲ. ᏰᎵ ᎠᏩᏛᏗ ᏂᏛᎴᏅᏓ : http://ᎣᏪᏅᏒ.comcast.ᎦᎸᎳᏗᏢ ᏚᎵᎬᏩᎳᏅ/~gyde/DEFpaper.htm</ref>. ᎾᏍᎩ ᎯᎠ ᎦᎪᏘ ᎾᎥ ᏄᎾᏓᎸ ᎫᏢᏗ ᎡᏆ ᎡᏍᎦᏂ ᎯᎠ ᎡᎶᎯ ᎢᎬᎾᏕᎾ ᎠᎴ ᎤᏯᎾᏛᏁᏗ ᏥᏄᏍᏗ [[carbon dioxide|ᎤᏃᎴ ᎬᏔᏅ]] sink, ᎦᏂᏝᎢ [[habitat (ecology)|ᏗᎦᎶᎪᏗ]], [[hydrologic cycle|hydrologic ᎠᏕᏴᎠᏍᎬ]] [[modulator]], ᎠᎴ [[soil|ᎦᏙᎯ]] conservers, ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ ᎤᎵᏍᎨᏛ ᎢᎦᏛ ᎯᎠ [[Earth|ᎡᎶᎯ]] ᎤᏤᎵ [[biosphere]].
 
 ᎠᏙᎯ ᎢᎾᎨ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᏂᎦᏛ ᎤᏔᏂᏗ ᎦᏙᎯ ᏰᎵᏇ ᎢᎬᏁᏗ ᎠᎨᎳᏍᏗ ᏡᎬ ᎤᏛᏏᏗᏒ, ᎾᎾᎢ ᏂᎦᏛᎢ ᎦᎸᎳᏗᏢ ᎯᎠ [[tree-line|ᏡᎬ-ᎠᏍᏓᏅᏅ]], ᎾᏍᎩ ᎤᏩᏒ ᎭᏢᏃ ᏂᎬᏩᏍᏛ ᎠᏥᎸ ᎠᏍᏓᏩᏛᏍᏙᏗ ᎨᏒᎢ ᎦᏟᏐᏗᎩ ᎦᎸᎳᏗ, ᎠᎴ ᎭᏢᏃ ᎯᎠ ᏄᏍᏗᏓᏅ ᎤᎭ ᏭᏪᏙᎢ ᏄᎵᏍᎨᏗᏴᎾ ᎾᎥᎢ ᏂᎬᏩᏍᏛ processes ᎠᎴ ᎾᎥᎢ ᏴᏫ activities. ᏥᏄᏍᏗ ᏂᎦᎥ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᏙᎯ ᎢᎾᎨ dominated ᎾᎥᎢ [[angiosperms]] ('''broadleaf ᎠᏙᎯ ᎢᎾᎨ''') ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ-ᎤᏪᎾᎢ ᎬᎾᏬᏍᎬ ᎾᏍᎩ dominated ᎾᎥᎢ [[gymnosperms]] ('''conifer''' ᎠᎴ '''needleleaf ᎠᏙᎯ ᎢᎾᎨ'''), ᎾᏍᎩ ᎤᏁᎳᎩ ᏗᎦᏘᎸᏓ ᎬᏂᎨᏒ ᏄᏍᏗ (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ-ᎤᏲᎢᏳᏛᎾᎮᏕᎩ aspen ᎠᎴ ᎣᏍᏛᏗᏍᏗ ᏓᏂᏙᎦ ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎢᏗᏢ ᎤᏜᏅᏛ). ᎠᏙᎯ ᎢᎾᎨ ᏱᏓᏟᎶᏍᏔᏅ ᎢᎦᎢ ᎨᏒ ᎤᎪᏗᏗ ᏡᎬ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᏂᏗᏢ ᎤᏍᏗ ᎡᏍᎦᏂ (ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏭ ᎠᎦᏍᎬ ᎠᎴ ᎡᎷᏪᎢ ᎠᏓᏁᎳᏅᎯ ᎠᏙᎯ ᎢᎾᎨ), ᎠᎴ ᏗᎦᏃᏢᎩ ᎦᏲᎵ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏬᎯᎸᏙᏗ ᎡᏆ ᎡᏍᎦᏂ (e.g., taiga ᎠᎴ ᎠᏤᏫᏍᎬ montane coniferous ᎠᏙᎯ ᎢᎾᎨ). ᎠᏙᎯ ᎢᎾᎨ ᎠᎴ ᎢᏳᏓᎵᎭ ᎣᏪᏅᏒ ᎤᎪᏗᏗ ᎦᏂᏝᎢ ᎠᎴ ᎦᎪᏘ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᎴ [[biomass]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏌᏊᎭ ᎡᏍᎦᏂ ᎨᏒᎢ ᎦᎸᎳᏗ ᎤᏠᏱᎭᎢ ᏐᎢ ᎢᏴ ᎠᏂᏙᎾᎥ ᎾᎥ ᏄᎾᏓᎸ. ᎤᏣᏘ ᎪᎯ biomass ᏄᎵᏍᏔᏅ ᎡᎳᏗᏢ-ᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎾᏍᏕᏢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᎴ ᏥᏄᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ ᏗᎫᎪᏙᏗ ᎢᎬᏁᏗ ᎦᎪᏘ [[detritus|ᎢᎦᏛ]]. ᎯᎠ ᎦᎪᏘ ᏑᏓᎴᎩ ᎠᏙᎯ ᎢᎾᎨ ᎢᎦᎢ ᎨᏐ [[lignin]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏗᎦᏃᏢᎩ ᎤᏍᎦᏃᎳ [[decompose|ᏗᎫᎪᏙᏗ ᎢᎬᏁᏗ]] ᎤᏠᏱᎭᎢ ᎬᏙᏗ ᏐᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᏭᏚᎸᏛ ᏗᎬᏙᏗ ᏯᏛᎿ ᏥᏄᏍᏗ [[cellulose]] ᎠᎴ carbohydrate.
 
@@ -34,7 +34,7 @@
 ᎠᏙᎯ ᎢᎾᎨ ᏰᎵᏇ ᎾᏍᏋ ᎠᏲᎶᎬ ᎯᎳᎪ ᎢᏳ [[logging]], [[forest fire|ᎠᏙᎯ ᎢᎾᎨ ᎠᏥᎸ]], [[acid rain|ᏧᏄᏦᏍᏔ ᎠᎦᏍᎬ]], [[herbivores]], ᎠᎴ [[diseases|ᎥᏳᎩ]], ᏄᎾᏛᏅ ᏐᎢ ᏧᏓᎴᏅᏓ, ᏂᎬᏂᏏᏍᎬ ᎤᏲᏨᎯ ᏕᏡᎬ. ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎤᎪᏗᏗ ᎠᏙᎯ ᎢᎾᎨ ᎤᎭ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᏭᏪᏙᎢ ᎦᎸᏉᏔᏅ ᎾᎥᎢ ᎠᏂᏴᏫ ᎢᎦᏛ ᎢᎦᎢ ᎢᎦᏘ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᏧᏕᏘᏴᏓ ᎪᏢᎯᏌᏅ forestry ᎠᎵᏏᎾᎯᏍᏙᏗ ᎤᎭ ᎤᎵᏍᏕᎸᎲᎩ ᎪᏢᎯᏐᏗ ᎠᎴ ᏄᎶᏒᏍᏛᎾ ᎡᏆ ᏗᎦᏛᏗ ᎠᎴ ᎤᎶᏒᏍᏔᏅᎯ ᏓᏓᏛᎾᏍᏗᏍᎬ. ᏱᏂᎬᏛᎾ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏙᎯ ᎢᎾᎨ ᎾᏛᏁᎸ ᎠᎦᏎᏍᏗ Ꮎ ᏂᎦᎥᎢ ᏑᏕᏘᏴᏓ ᎬᏩᏚᏫᏛ 1.5 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (6,000 km²) ᎯᎠ nation’s 750 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (3,000,000 km²) forestland ᎨᏒᎢ ᎤᎴᎾᎯᏛ [[urban sprawl|ᎦᏁᎸ ᏂᎦᏅᎯᏒ]] ᎠᎴ ᏚᏙᎳᏩᏛᎲ. ᎾᏍᎩ ᎨᏒᎢ ᎤᏚᎩ ᎤᏩᏒ Ꮎ ᎯᎠ ᎤᎦᎾᏭ ᎤᏩᏒ ᏫᎵ ᎤᏓᏲᎱᏎᏗ 20 25 ᎢᏳᏆᏗᏅᏓ ᎢᏧᏟᎶᏛ (80,000 100,000 km²) ᏚᏙᎳᏩᏛᎲ.
 
 == ᏫᏓᏎᎸᎢ ==
-"...ᎯᎠ [[tap root|ᎠᎫᎩᏍᏗ ᎤᎾᏍᏕᏢ]]ᏫᏓᏲᎯᏍᏗ [[Rain|rainwater]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏚᎢ ᎥᏓᎵ ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎠᎴ redistribute ᎠᎹ...ᎧᏁᏉᎠ [[photosynthesis]] ᎠᎴ ᎯᎠ ᏙᎢ ᎠᎹ...ᎾᎥᎢ 40% ᎭᏫᎾᏗᏢ ᎯᎠ [[dry season|ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]...ᎾᎯᏳᎨᏒ ᎯᎠ ᎦᏚᎵᏓ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᎾᏍᎩ ᎯᎠ ᏗᎦᎪᎯᏗ ᏰᎵᏇ ᎠᏓᎾᏅ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 10% ᎯᎠ ᎾᏕᏘᏴᎯᏒ [[Precipitation (meteorology)|ᏑᎾᎴᎢ]] ᏥᏄᏍᏗ ᎠᏍᏛᎩ ᏥᏄᏍᏗ 13 ᎠᏎᎯᎯ (43 ᏧᎾᎳᏏᏕᎾ) ᎭᏫᎾᏗᏢ ᎦᏙᎯ, ᎾᏍᏋ tapped ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏯᏅᏓ...ᏡᎬ ᎠᎲᏏᏓᏍᏗ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᏯᎢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᏗᏓᏁᏟᏴᏍᏗ ᏴᏩᏚᏫᏛ ᎤᏣᏘ ᎦᏣᏄᎳᎯᎨ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᏰᎵᏇ ᎢᏳᏃ ᏰᎵ [[percolate|ᎢᏳᏍᏗ ᎧᏃᎮᏗ]] ᏗᎬᏩᎶᏒ ᎯᎠ [[soil|ᎦᏙᎯ]]..."<ref>[http://www.sciencedaily.com/releases/2006/01/060112035906.htm 2006-01-13, ''Sciencedaily''. "Deep-rooted Plants Have Much Greater Impact On Climate Than Experts Thought."]</ref>
+"...ᎯᎠ [[tap root|ᎠᎫᎩᏍᏗ ᎤᎾᏍᏕᏢ]] ᏫᏓᏲᎯᏍᏗ [[Rain|rainwater]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏚᎢ ᎥᏓᎵ ᎠᏍᏛᎩ ᎭᏫᎾᏗᏢ ᎦᏙᎯ ᎠᎴ redistribute ᎠᎹ...ᎧᏁᏉᎠ [[photosynthesis]] ᎠᎴ ᎯᎠ ᏙᎢ ᎠᎹ...ᎾᎥᎢ 40% ᎭᏫᎾᏗᏢ ᎯᎠ [[dry season|ᎤᎧᏲᏗ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]...ᎾᎯᏳᎨᏒ ᎯᎠ ᎦᏚᎵᏓ ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ, ᎾᏍᎩ ᎯᎠ ᏗᎦᎪᎯᏗ ᏰᎵᏇ ᎠᏓᎾᏅ ᏥᏄᏍᏗ ᎤᏣᏘ ᏥᏄᏍᏗ 10% ᎯᎠ ᎾᏕᏘᏴᎯᏒ [[Precipitation (meteorology)|ᏑᎾᎴᎢ]] ᏥᏄᏍᏗ ᎠᏍᏛᎩ ᏥᏄᏍᏗ 13 ᎠᏎᎯᎯ (43 ᏧᎾᎳᏏᏕᎾ) ᎭᏫᎾᏗᏢ ᎦᏙᎯ, ᎾᏍᏋ tapped ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᎧᏲᏗ ᎢᏯᏅᏓ...ᏡᎬ ᎠᎲᏏᏓᏍᏗ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᏯᎢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᎵᏍᎪᎸᏙᏗ ᎠᎹ ᏗᏓᏁᏟᏴᏍᏗ ᏴᏩᏚᏫᏛ ᎤᏣᏘ ᎦᏣᏄᎳᎯᎨ ᎬᎾᏬᏍᎬ ᎾᏍᎩ ᏰᎵᏇ ᎢᏳᏃ ᏰᎵ [[percolate|ᎢᏳᏍᏗ ᎧᏃᎮᏗ]] ᏗᎬᏩᎶᏒ ᎯᎠ [[soil|ᎦᏙᎯ]]..."<ref>[http://www.sciencedaily.com/releases/2006/01/060112035906.htm 2006-01-13, ''Sciencedaily''. "Deep-rooted Plants Have Much Greater Impact On Climate Than Experts Thought."]</ref>
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 [[File:Pine tree forest02.jpg|thumb|250px| coniferous (ᏃᏥ) ᎠᏙᎯ ᎢᎾᎨ]]
