--- a/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
+++ b/ᎠᏰᎵ_ᏚᎾᏙᏢᏩᏗᏒ_ᏙᎪᏪᎸ.mw
@@ -35,7 +35,7 @@
 *[[Iran]]
 *[[Iraq]]
 *[[Ireland]]
-*[[Israel|ᎢᏍᏩᎵ]]<ref>[http://home.earthlink.net/~deanna1jc/moondoves_spiral_maindictionary.htm "ᏲᏁᎦ–ᏣᎳᎦ ᎠᏁᏢᏔᏅᎯ." ''Moondoves Spiral.'' (2 ᏅᏓᏕᏆ 2010)
+*[[Israel|ᎢᏍᏩᎵ]]<ref>[http://home.earthlink.net/~deanna1jc/moondoves_spiral_maindictionary.htm "ᏲᏁᎦ–ᏣᎳᎦ ᎠᏁᏢᏔᏅᎯ." ''Moondoves Spiral.'' (2 ᏅᏓᏕᏆ 2010)</ref>
 
 ==Ꭳ==
 *[[Oman|ᎣᎹᏂ]]
