--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -1,98 +1,98 @@
-{{CompactTOC8}}
+{{ᎤᏍᏗ TOC}}
 <div style="float:left; width:49%;">
 
 ==Ꭰ==
-*[[Lady's slipper|ᎠᏂᎨᏯ ᏧᎾᎳᏑᎵᏙ]]<ref name=h232>Howard 232</ref>- ''[[Cypripedioideae]]''
-*[[Good money plant|ᎠᏕᎳᏃᏍᏓ]]<ref name=h231>Howard 231</ref>
-*[[Fish weed|ᎠᏣᏗ ᏗᎦᏛᏗ]]<ref name=h231/>
-*[[Cedar|ᎠᏥᎾ]]<ref name=h231/> - ''[[Juniperus]]'' (''[[Juniperus virginiana]]'')
+*[[Lady's slipper|ᎠᏂᎨᏯ ᏧᎾᎳᏑᎵᏙ]] <ref name=h232>Howard 232</ref>- ''[[Cypripedioideae]]''
+*[[Good money plant|ᎠᏕᎳᏃᏍᏓ]] <ref name=h231>Howard 231</ref>
+*[[Fish weed|ᎠᏣᏗ ᏗᎦᏛᏗ]] <ref name=h231/>
+*[[Cedar|ᎠᏥᎾ]] <ref name=h231/> - ''[[Juniperus]]'' (''[[Juniperus virginiana]]'')
 
 ==Ꭲ==
-*[[Snake tongue|ᎢᏅᏓ ᎦᏅᎪ]]<ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Nassauvia serpens]]''
-*[[Hazelnut|ᎢᏩᎩᏓ]]<ref name=h231/> - ''[[Corylus]]''
+*[[Snake tongue|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Nassauvia serpens]]''
+*[[Hazelnut|ᎢᏩᎩᏓ]] <ref name=h231/> - ''[[Corylus]]''
 
 ==Ꭴ==
-*[[Ivy|ᎤᎸᏗ]]<ref name=h231/> - ''[[Hedera]]''
-*[[Blackgum|ᎤᏂᏆ]]<ref name=h231/> - ''[[Nyssa sylvatica]]''
-*[[Burdock|ᎤᏂᏍᏗᎸᏍᏗ ᏧᎳᎾ]]<ref name=h231/> - ''[[Arctium]]''
-*[[Spice peaches|ᎤᏂᏩᎦ]]<ref name=h232/>
-*[[Milkweed|ᎤᏅᏗ ᎠᏔᏍᎩᏍᎩ]]<ref name=h232/> - ''[[Asclepias]]''
-*[[Buckeye|ᎤᏍᏆᏓ]]<ref name=h231/> - ''[[Aesculus]]''
-*[[Beech|ᎤᏙᎳᏂ]]<ref name=h231/> - ''[[Fagus]]''
-*[[Dewberry|ᎤᏠᏏᏅᏓ]]<ref name=h231/> - ''[[Rubus]]'' subspecies ''[[Eubatus]]''
+*[[Ivy|ᎤᎸᏗ]] <ref name=h231/> - ''[[Hedera]]''
+*[[Blackgum|ᎤᏂᏆ]] <ref name=h231/> - ''[[Nyssa sylvatica]]''
+*[[Burdock|ᎤᏂᏍᏗᎸᏍᏗ ᏧᎳᎾ]] <ref name=h231/> - ''[[Arctium]]''
+*[[Spice peaches|ᎤᏂᏩᎦ]] <ref name=h232/>
+*[[Milkweed|ᎤᏅᏗ ᎠᏔᏍᎩᏍᎩ]] <ref name=h232/> - ''[[Asclepias]]''
+*[[Buckeye|ᎤᏍᏆᏓ]] <ref name=h231/> - ''[[Aesculus]]''
+*[[Beech|ᎤᏙᎳᏂ]] <ref name=h231/> - ''[[Fagus]]''
+*[[Dewberry|ᎤᏠᏏᏅᏓ]] <ref name=h231/> - ''[[Rubus]]'' subspecies ''[[Eubatus]]''
 
 ==Ꭶ==
-*[[Gourd|ᎦᎸᏅ]]<ref name=h231/> - ''[[Lagenaria]]''
+*[[Gourd|ᎦᎸᏅ]] <ref name=h231/> - ''[[Lagenaria]]''
 
 ==Ꭷ==
-*[[Locust tree|ᎧᎶᏪᎩᏗ]]<ref name=h232/> - ''[[Gleditsia]]''
-:*[[Honey tree|ᎧᎵᏎᏥ]]<ref name=h231/> - ''[[Gleditsia triacanthos]]'' <!--assuming this is a honey locust-->
-*[[Blackberry|ᎧᏁᎦᏟ]]<ref name=h231/> - ''[[Rubus]]'' spp., ''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]''
-*[[Blue grass|ᎧᏁᏍᎩᏪᏗ]]<ref name=h231/> - ''[[Poa]]'' (esp. ''[[Poa pratensis]]''
-*[[Dogwood|ᎧᏅᏏᏔ]]<ref name=h231/> - ''[[Cornus]] spp.''
-*[[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]]<ref name=h231/> - ᏰᎵᏊ ᏱᎩ ''[[Cassia]]'' spp. <!--''[[Senna]]'' (''[[Senna obtusifolia]]'') ᎠᎴ ''[[Lesquerella]]''rattlebox, rattlepod, bladderpod. Could possibly also be Sesbania drummondii -->
+*[[Locust tree|ᎧᎶᏪᎩᏗ]] <ref name=h232/> - ''[[Gleditsia]]''
+:*[[Honey tree|ᎧᎵᏎᏥ]] <ref name=h231/> - ''[[Gleditsia triacanthos]]'' <!--assuming this is a honey locust-->
+*[[Blackberry|ᎧᏁᎦᏟ]] <ref name=h231/> - ''[[Rubus]]'' spp., ''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]''
+*[[Blue grass|ᎧᏁᏍᎩᏪᏗ]] <ref name=h231/> - ''[[Poa]]'' (esp. ''[[Poa pratensis]]''
+*[[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus]] spp.''
+*[[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]] <ref name=h231/> - ᏰᎵᏊ ᏱᎩ ''[[Cassia]]'' spp. <!--''[[Senna]]'' (''[[Senna obtusifolia]]'') ᎠᎴ ''[[Lesquerella]]''rattlebox, rattlepod, bladderpod. Could possibly also be Sesbania drummondii -->
 
 ==Ꭹ==
-*[[Bloodroot|ᎩᏟ ᎤᏩᏘ]]<ref name=h231/> - ''[[Sanguinaria canadensis]]''
+*[[Bloodroot|ᎩᏟ ᎤᏩᏘ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
 
 ==Ꭼ==
-*[[Black weed|ᎬᎿᎨ]]<ref name=h231/> - ''[[Ambrosia artemisiifolia]]''
-*[[Coon root|ᎬᏟ ᎤᎿᏍᏕᏢ]]<ref name=h231/> - ''[[Sanguinaria canadensis]]''
-*[[Coon-tail weed|ᎬᏟ ᎦᏙᎦ]]<ref name=h231/> - ''[[Ceratophyllum demersum]]'' <!--Hornwort coon's tail-->
+*[[Black weed|ᎬᎿᎨ]] <ref name=h231/> - ''[[Ambrosia artemisiifolia]]''
+*[[Coon root|ᎬᏟ ᎤᎿᏍᏕᏢ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
+*[[Coon-tail weed|ᎬᏟ ᎦᏙᎦ]] <ref name=h231/> - ''[[Ceratophyllum demersum]]'' <!--Hornwort coon's tail-->
 
 ==Ꮍ==
-*[[Moody grass|ᎽᏗ ᎦᏄᎧᎢ]]<ref name=h232/> - ''[[Cynodon dactylon]]''
+*[[Moody grass|ᎽᏗ ᎦᏄᎧᎢ]] <ref name=h232/> - ''[[Cynodon dactylon]]''
 
 ==Ꮔ==
-*[[Aster|ᏄᏱᎦᎵ]]<ref name=h231/> - ''[[Aster]]'' (''[[Aster subulatus]]'') 
+*[[Aster|ᏄᏱᎦᎵ]] <ref name=h231/> - ''[[Aster]]'' (''[[Aster subulatus]]'') 
 
 ==Ꮜ==
-*[[Osage tobacco|ᏌᏏ ᎤᏃᎩᏍᏗ ᎪᏍᏚᏓ]]<ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Salvia verbenaca]]'' ᎠᎴ ''[[Salvia urticifolia]]''<!--described as "wild sage." Could also be "Wajaje Hitci" or mullein--> 
+*[[Osage tobacco|ᏌᏏ ᎤᏃᎩᏍᏗ ᎪᏍᏚᏓ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Salvia verbenaca]]'' ᎠᎴ ''[[Salvia urticifolia]]''<!--described as "wild sage." Could also be "Wajaje Hitci" or mullein--> 
 
 ==Ꮞ==
-*[[Sage|ᏎᏥ ᏒᏟ]]<ref name=h232/> - ''[[Salvia]]''
+*[[Sage|ᏎᏥ ᏒᏟ]] <ref name=h232/> - ''[[Salvia]]''
 </div><div style="float:right; width:49%;">
 
 ==Ꮠ==
-*[[Hickory nut|ᏐᎯ]]<ref name=h231/> - ''[[Corylus]]''
+*[[Hickory nut|ᏐᎯ]] <ref name=h231/> - ''[[Corylus]]''
 
 ==Ꮢ==
-*[[Apple|ᏒᎦᏔ]]<ref name=h231/> - ''[[Malus]]''
-*[[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]]<ref name=h232/>
+*[[Apple|ᏒᎦᏔ]] <ref name=h231/> - ''[[Malus]]''
+*[[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]] <ref name=h232/>
 
 ==Ꮧ==
-*[[Red root|ᏗᎵᎦᎵᏍᎩ ᎩᎦᎨ ᎤᎿᏍᏕᏜ]]<ref name=h232/> ᏰᎵᏊ ᏱᎩ ''[[Ceanothus Americanus]]''<ref name=herb>[http://www.altnature.com/library/cherokee.htm "Cherokee Herbology."] ''Alternative Nature Online Herbal.'' (14 ᏅᏓᏕᏆ 2010)</ref>
-*[[Poison bean|ᏗᏓᏅᏕᏍᎩ]]<ref name=h232/> - ''[[Sesbania drummondii ]]''
+*[[Red root|ᏗᎵᎦᎵᏍᎩ ᎩᎦᎨ ᎤᎿᏍᏕᏜ]] <ref name=h232/> ᏰᎵᏊ ᏱᎩ ''[[Ceanothus Americanus]]'' <ref name=herb>[http://www.altnature.com/library/cherokee.htm "Cherokee Herbology."] ''Alternative Nature Online Herbal.'' (14 ᏅᏓᏕᏆ 2010)</ref>
+*[[Poison bean|ᏗᏓᏅᏕᏍᎩ]] <ref name=h232/> - ''[[Sesbania drummondii ]]''
 
 ==Ꮣ==
-*[[Elm|ᏓᏩᏥᎳ]]<ref name=h231/> - ''[[Ulmus]]''
+*[[Elm|ᏓᏩᏥᎳ]] <ref name=h231/> - ''[[Ulmus]]''
 
 ==Ꮲ==
-*[[Cattail|ᏢᏓᏥ ᎦᏙᎦ]]<ref name=h231/> - ''[[Typha]]''
-*[[Maple tree|ᏢᏩᎵᎦ]]<ref name=h232/> - ''[[Acer]]''
+*[[Cattail|ᏢᏓᏥ ᎦᏙᎦ]] <ref name=h231/> - ''[[Typha]]''
+*[[Maple tree|ᏢᏩᎵᎦ]] <ref name=h232/> - ''[[Acer]]''
 
 ==Ꮵ==
-*[[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]]<ref name=h232/>
+*[[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]] <ref name=h232/>
 
 ==Ꮷ==
-*[[Ash|ᏧᎦᏃᏅ]]<ref name=h231/> - ''[[Fraxinus]] spp.''
-*[[Birch|ᏧᏁᏃᏅᏗ]]<ref name=h231/> - ''[[Betula]] spp.''
-*[[Pin burse weed|ᏧᏂᏆᏘ ᎤᏂᏍᏗᎸᏍᏗ]]<ref name=h232/>
-*[[Briar|ᏧᏂᏣᏲᏍᏗ]]<ref name=h231/> - ''[[Rosa]]'', ''[[Rubus]]'', ᎠᎴ ''[[Smilax]]''
-*[[Silver bur ragweed|ᏧᏅᏍᏗ ᎤᏂᏍᏗᎸᏍᏗ]]<ref name=h232/> - ''[[Ambrosia chamissonis]]''
-*[[Huckleberry|ᏧᏩᏯ]]<ref name=h231/> - '[[Gaylussacia]]''
-*[[Red tulip|ᏧᏳᎮᎵᏗ]]<ref name=h232/>
+*[[Ash|ᏧᎦᏃᏅ]] <ref name=h231/> - ''[[Fraxinus]] spp.''
+*[[Birch|ᏧᏁᏃᏅᏗ]] <ref name=h231/> - ''[[Betula]] spp.''
+*[[Pin burse weed|ᏧᏂᏆᏘ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/>
+*[[Briar|ᏧᏂᏣᏲᏍᏗ]] <ref name=h231/> - ''[[Rosa]]'', ''[[Rubus]]'', ᎠᎴ ''[[Smilax]]''
+*[[Silver bur ragweed|ᏧᏅᏍᏗ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/> - ''[[Ambrosia chamissonis]]''
+*[[Huckleberry|ᏧᏩᏯ]] <ref name=h231/> - '[[Gaylussacia]]''
+*[[Red tulip|ᏧᏳᎮᎵᏗ]] <ref name=h232/>
 
 ==Ꮹ==
-*[[Hickory|ᏩᏁᎢ]]<ref name=h231/> - ''[[Corylus]]''
-*[[Pigeon tail|ᏩᏯ ᎦᏩᏙᎦ]]<ref name=h232/>
+*[[Hickory|ᏩᏁᎢ]] <ref name=h231/> - ''[[Corylus]]''
+*[[Pigeon tail|ᏩᏯ ᎦᏩᏙᎦ]] <ref name=h232/>
 
 ==Ꮺ==
-*[[Horehound|ᏪᏌ ᎤᏂᎩᏍᏗ]]<ref name=h231/> - ''[[Marrubium vulgare]]''
+*[[Horehound|ᏪᏌ ᎤᏂᎩᏍᏗ]] <ref name=h231/> - ''[[Marrubium vulgare]]''
 
 ==Ᏻ==
-*[[Honeysuckle|ᏩᎴᎳ ᎤᏂᏥᎳᎩᏍᏗ]]<ref name=h231/> - ''[[Lonicera]]''
-*[[Hickory-weed|ᏳᏁᎩᏛ]]<ref name=h231/>
+*[[Honeysuckle|ᏩᎴᎳ ᎤᏂᏥᎳᎩᏍᏗ]] <ref name=h231/> - ''[[Lonicera]]''
+*[[Hickory-weed|ᏳᏁᎩᏛ]] <ref name=h231/>
 
 </div><div style="float:left; width:100%;">
 
