--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -3,23 +3,34 @@
 
 ==Ꭰ==
 *[[Lady's slipper|ᎠᏂᎨᏯ ᏧᎾᎳᏑᎵᏙ]] <ref name=h232>Howard 232</ref>- ''[[Cypripedioideae]]''
+*[[Sweet William|ᎠᏂᏧᏣ ᎠᏂᏥᎸᏍᎩ]] <ref name=h232/> - ''[[Dianthus barbatus]]''
 *[[Good money plant|ᎠᏕᎳᏃᏍᏓ]] <ref name=h231>Howard 231</ref>
+*[[Yellow string|ᎠᏚᏴᏍᎩ]] <ref name=h232/> - ''[[
 *[[Fish weed|ᎠᏣᏗ ᏗᎦᏛᏗ]] <ref name=h231/>
+*[[Watercress|ᎠᏥᎳ ᎠᎹᏱ ᎤᏚᎯ]] <ref name=h232/> - ''[[Nasturtium officinale]]''
+*[[Wild mustard|ᎠᏥᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Brassica rapa]]''
 *[[Cedar|ᎠᏥᎾ]] <ref name=h231/> - ''[[Juniperus]]'' (''[[Juniperus virginiana]]'')
+*[[Thunder weed|ᎠᏴᏓᏆᏳᏍᏗ]]  <ref name=h231/>
 
 ==Ꭲ==
+*[[Wild gourd|ᎢᎾᎨ ᎡᎯ ᎦᏄᎸ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Cucurbitaceae marah]]''
+*[[Wild onion|ᎢᎾᎨ ᎡᎯ ᏒᎩ]] <ref name=h232/> - ''[[Allium canadense]]'' ᎠᎴ ''[[Allium vineale]]''
 *[[Snake tongue|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Nassauvia serpens]]''
 *[[Hazelnut|ᎢᏩᎩᏓ]] <ref name=h231/> - ''[[Corylus]]''
 
 ==Ꭴ==
 *[[Ivy|ᎤᎸᏗ]] <ref name=h231/> - ''[[Hedera]]''
+*[[Witch hazel|ᎤᏂᎩᎾ]] <ref name=h232/> - ''[[Hamamelis]]''
 *[[Blackgum|ᎤᏂᏆ]] <ref name=h231/> - ''[[Nyssa sylvatica]]''
 *[[Burdock|ᎤᏂᏍᏗᎸᏍᏗ ᏧᎳᎾ]] <ref name=h231/> - ''[[Arctium]]''
 *[[Spice peaches|ᎤᏂᏩᎦ]] <ref name=h232/>
 *[[Milkweed|ᎤᏅᏗ ᎠᏔᏍᎩᏍᎩ]] <ref name=h232/> - ''[[Asclepias]]''
+*[[White ball weed|ᎤᏍᏗᏝᎯ]] <ref name=h232/>
 *[[Buckeye|ᎤᏍᏆᏓ]] <ref name=h231/> - ''[[Aesculus]]''
 *[[Beech|ᎤᏙᎳᏂ]] <ref name=h231/> - ''[[Fagus]]''
+*[[Sweet Annie weed|ᎤᏚᎾᏍᏓ]] <ref name=h231/> - ''[[Artemisia annua]]''
 *[[Dewberry|ᎤᏠᏏᏅᏓ]] <ref name=h231/> - ''[[Rubus]]'' subspecies ''[[Eubatus]]''
+*[[Wire weed|ᎤᏪᏙᎢᏓ]] <ref name=h232/> - ''[[Sida acuta]]''
 
 ==Ꭶ==
 *[[Gourd|ᎦᎸᏅ]] <ref name=h231/> - ''[[Lagenaria]]''
@@ -35,7 +46,11 @@
 ==Ꭹ==
 *[[Bloodroot|ᎩᏟ ᎤᏩᏘ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
 
+==Ꭻ==
+*[[Tick weed|ᎫᎫ ᎩᎦᎨ ᎠᏥᎸᏍᎩ]] <ref name=h231/> - ''[[Coreopsis]]''
+
 ==Ꭼ==
+*[[Turkey feet|ᎬᎾ ᎤᎳᏏᏕ]] <ref name=h232/> - ''[[Andropogon gerardii]]''<ref>[http://www.butler.edu/herbarium/prairie/turkeyfoot.html "Turkey foot grass, or Big bluestem (Andropogon gerardii)."] ''Butler University: Friesner Herbarium.'' (14 ᏅᏓᏕᏆ 2010)</ref>
 *[[Black weed|ᎬᎿᎨ]] <ref name=h231/> - ''[[Ambrosia artemisiifolia]]''
 *[[Coon root|ᎬᏟ ᎤᎿᏍᏕᏢ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
 *[[Coon-tail weed|ᎬᏟ ᎦᏙᎦ]] <ref name=h231/> - ''[[Ceratophyllum demersum]]'' <!--Hornwort coon's tail-->
@@ -45,23 +60,33 @@
 
 ==Ꮔ==
 *[[Aster|ᏄᏱᎦᎵ]] <ref name=h231/> - ''[[Aster]]'' (''[[Aster subulatus]]'') 
+</div><div style="float:right; width:49%;">
+
+==Ꮕ==
+*[[Wild clover|ᏅᎩ ᏧᎦᏅᏓᏗ ᎦᏄᎸᎢ]] <ref name=h232/> - ''[[Trifolium]]''
 
 ==Ꮜ==
+*[[Squirrel tail|ᏌᎶᎵ ᎦᏙᎦ]] <ref name=h232/>
 *[[Osage tobacco|ᏌᏏ ᎤᏃᎩᏍᏗ ᎪᏍᏚᏓ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Salvia verbenaca]]'' ᎠᎴ ''[[Salvia urticifolia]]''<!--described as "wild sage." Could also be "Wajaje Hitci" or mullein--> 
 
 ==Ꮞ==
 *[[Sage|ᏎᏥ ᏒᏟ]] <ref name=h232/> - ''[[Salvia]]''
-</div><div style="float:right; width:49%;">
 
 ==Ꮠ==
 *[[Hickory nut|ᏐᎯ]] <ref name=h231/> - ''[[Corylus]]''
 
 ==Ꮢ==
 *[[Apple|ᏒᎦᏔ]] <ref name=h231/> - ''[[Malus]]''
+*[[Stink weed||ᏒᏟ]] <ref name=h232/><!--ᏰᎵᏊ ᏱᎩ ''Thlaspi arvense''-->
 *[[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]] <ref name=h232/>
 
+==Ꮣ==
+*[[Turnips|ᏓᏈᏌᏂ]] <ref name=h232/> - ''[[Brassica rapa]]''
+
 ==Ꮧ==
+*[[White root|ᏗᎵᎦᎵᏍᎩ ᎤᏍᏗᎢ]] <ref name=h232/>
 *[[Red root|ᏗᎵᎦᎵᏍᎩ ᎩᎦᎨ ᎤᎿᏍᏕᏜ]] <ref name=h232/> ᏰᎵᏊ ᏱᎩ ''[[Ceanothus Americanus]]'' <ref name=herb>[http://www.altnature.com/library/cherokee.htm "Cherokee Herbology."] ''Alternative Nature Online Herbal.'' (14 ᏅᏓᏕᏆ 2010)</ref>
+*[[Spider weed|ᏗᎾᏓᏁᏍᎩ]] <ref name=h232/>
 *[[Poison bean|ᏗᏓᏅᏕᏍᎩ]] <ref name=h232/> - ''[[Sesbania drummondii ]]''
 
 ==Ꮣ==
@@ -74,12 +99,17 @@
 ==Ꮵ==
 *[[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]] <ref name=h232/>
 
+==Ꮶ==
+*[[Tobacco|ᏦᎳ]] - ''[[Nicotiana]]''
+*[[Tobacco weed|ᏦᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Solanum mauritianum]]''
+
 ==Ꮷ==
 *[[Ash|ᏧᎦᏃᏅ]] <ref name=h231/> - ''[[Fraxinus]] spp.''
 *[[Birch|ᏧᏁᏃᏅᏗ]] <ref name=h231/> - ''[[Betula]] spp.''
 *[[Pin burse weed|ᏧᏂᏆᏘ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/>
 *[[Briar|ᏧᏂᏣᏲᏍᏗ]] <ref name=h231/> - ''[[Rosa]]'', ''[[Rubus]]'', ᎠᎴ ''[[Smilax]]''
 *[[Silver bur ragweed|ᏧᏅᏍᏗ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/> - ''[[Ambrosia chamissonis]]''
+*[[Vain weed|ᏧᏩᏚᎾ ᏧᎳᎢ]] <ref name=h232/>
 *[[Huckleberry|ᏧᏩᏯ]] <ref name=h231/> - '[[Gaylussacia]]''
 *[[Red tulip|ᏧᏳᎮᎵᏗ]] <ref name=h232/>
 
@@ -110,7 +140,7 @@
 *[http://www.unl.edu/agnicpls/gpcn/index.html Historical Common Names of Great Plains Plants]
 *[http://plants.usda.gov/ USDA PLANTS Database]
 
-[[Category:Plantae| ]]
+[[Category:ᏗᎦᎪᎯᏗ| ]]
 
 [[als:Alemannische Pflanzennamen]]
 [[lb:Lëscht vu lëtzebuergesche Planzennimm]]
