--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -5,7 +5,7 @@
 *[[Lady's slipper|ᎠᏂᎨᏯ ᏧᎾᎳᏑᎵᏙ]] <ref name=h232>Howard 232</ref>- ''[[Cypripedioideae]]''
 *[[Sweet William|ᎠᏂᏧᏣ ᎠᏂᏥᎸᏍᎩ]] <ref name=h232/> - ''[[Dianthus barbatus]]''
 *[[Good money plant|ᎠᏕᎳᏃᏍᏓ]] <ref name=h231>Howard 231</ref>
-*[[Yellow string|ᎠᏚᏴᏍᎩ]] <ref name=h232/> - ''[[
+*[[Yellow string|ᎠᏚᏴᏍᎩ]] <ref name=h232/> <!--yellow string beans??-->
 *[[Fish weed|ᎠᏣᏗ ᏗᎦᏛᏗ]] <ref name=h231/>
 *[[Watercress|ᎠᏥᎳ ᎠᎹᏱ ᎤᏚᎯ]] <ref name=h232/> - ''[[Nasturtium officinale]]''
 *[[Wild mustard|ᎠᏥᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Brassica rapa]]''
