--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -77,7 +77,7 @@
 
 ==Ꮢ==
 *[[Apple|ᏒᎦᏔ]] <ref name=h231/> - ''[[Malus]]''
-*[[Stink weed||ᏒᏟ]] <ref name=h232/><!--ᏰᎵᏊ ᏱᎩ ''Thlaspi arvense''-->
+*[[Stink weed|ᏒᏟ]] <ref name=h232/><!--ᏰᎵᏊ ᏱᎩ ''Thlaspi arvense''-->
 *[[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]] <ref name=h232/>
 
 ==Ꮣ==
