--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -2,12 +2,16 @@
 <div style="float:left; width:49%;">
 
 ==Ꭰ==
+*[[Strawberry|ᎠᏂ]] - ''[[Fragaria]]''
 *[[Lady's slipper|ᎠᏂᎨᏯ ᏧᎾᎳᏑᎵᏙ]] <ref name=h232>Howard 232</ref>- ''[[Cypripedioideae]]''
+*[[Carrots|ᎠᏂᏓᎶᏂᎨ ᎦᏙ ᎠᏂᎵᏗᏍᏗ]] - ''[[Daucus carota]]'' subsp. ''sativus''
 *[[Sweet William|ᎠᏂᏧᏣ ᎠᏂᏥᎸᏍᎩ]] <ref name=h232/> - ''[[Dianthus barbatus]]''
+*[[Oak|ᎠᏍᏓᏯᎯ]] - ''[[Quercus]]''
 *[[Good money plant|ᎠᏕᎳᏃᏍᏓ]] <ref name=h231>Howard 231</ref>
 *[[Yellow string|ᎠᏚᏴᏍᎩ]] <ref name=h232/> <!--yellow string beans??-->
 *[[Fish weed|ᎠᏣᏗ ᏗᎦᏛᏗ]] <ref name=h231/>
 *[[Watercress|ᎠᏥᎳ ᎠᎹᏱ ᎤᏚᎯ]] <ref name=h232/> - ''[[Nasturtium officinale]]''
+*[[Orange (fruit)|ᎠᏴᏕᏂᎨ]] - ''[[Citrus ×sinensis]]''
 *[[Wild mustard|ᎠᏥᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Brassica rapa]]''
 *[[Cedar|ᎠᏥᎾ]] <ref name=h231/> - ''[[Juniperus]]'' (''[[Juniperus virginiana]]'')
 *[[Thunder weed|ᎠᏴᏓᏆᏳᏍᏗ]]  <ref name=h231/>
@@ -17,6 +21,7 @@
 *[[Wild onion|ᎢᎾᎨ ᎡᎯ ᏒᎩ]] <ref name=h232/> - ''[[Allium canadense]]'' ᎠᎴ ''[[Allium vineale]]''
 *[[Snake tongue|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Nassauvia serpens]]''
 *[[Hazelnut|ᎢᏩᎩᏓ]] <ref name=h231/> - ''[[Corylus]]''
+*[[Pumpkin|ᎢᏯ]] - ''[[Cucurbita pepo]]'', ''[[Cucurbita mixta]]'', ''[[Cucurbita maxima]]'', ᎠᎴ ''[[Cucurbita moschata]]''
 
 ==Ꭴ==
 *[[Ivy|ᎤᎸᏗ]] <ref name=h231/> - ''[[Hedera]]''
@@ -33,11 +38,15 @@
 *[[Wire weed|ᎤᏪᏙᎢᏓ]] <ref name=h232/> - ''[[Sida acuta]]''
 
 ==Ꭶ==
+*[[Cucumber|ᎦᎦᎹ]] - ''[[Cucumis sativus]]''
+*[[Redbud|ᎦᎶᏪᏗ]] - ''[[Cercis]]''
 *[[Gourd|ᎦᎸᏅ]] <ref name=h231/> - ''[[Lagenaria]]''
+*[[Grass|ᎦᏪᎳᎢ]] - ''[[Poaceae]]''
 
 ==Ꭷ==
-*[[Locust tree|ᎧᎶᏪᎩᏗ]] <ref name=h232/> - ''[[Gleditsia]]''
+*[[Locust tree|ᎧᎶᏪᎩᏗ]] <ref name=h232/> ([[ᎧᎶᏇᎩᏗ]]) - ''[[Gleditsia]]''
 :*[[Honey tree|ᎧᎵᏎᏥ]] <ref name=h231/> - ''[[Gleditsia triacanthos]]'' <!--assuming this is a honey locust-->
+*[[Sassafras|ᎧᎾᏏᏔ]] - ''[[Sassafras]]''
 *[[Blackberry|ᎧᏁᎦᏟ]] <ref name=h231/> - ''[[Rubus]]'' spp., ''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]''
 *[[Blue grass|ᎧᏁᏍᎩᏪᏗ]] <ref name=h231/> - ''[[Poa]]'' (esp. ''[[Poa pratensis]]''
 *[[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus]] spp.''
@@ -45,11 +54,18 @@
 
 ==Ꭹ==
 *[[Bloodroot|ᎩᏟ ᎤᏩᏘ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
+*[[Cherry|ᎩᏔᏯ]] - ''[[Prunus avium]]'' ᎠᎴ ''[[Prunus cerasus]]''
+
+==Ꭺ==
+*[[Rice|ᎪᏃᎮᏅ]] - ''[[Oryza sativa]]''
 
 ==Ꭻ==
 *[[Tick weed|ᎫᎫ ᎩᎦᎨ ᎠᏥᎸᏍᎩ]] <ref name=h231/> - ''[[Coreopsis]]''
+*[[Beech|ᏚᏒ]] - ''[[Fagus]]''
+*[[Mulberry|ᏚᏩ]] - ''[[Moraceae]]'' (''[[Morus rubra]]'')
 
 ==Ꭼ==
+*[[Watermelon|ᎬᎩᏍᏗ]] - ''[[Citrullus lanatus]]''
 *[[Turkey feet|ᎬᎾ ᎤᎳᏏᏕ]] <ref name=h232/> - ''[[Andropogon gerardii]]''<ref>[http://www.butler.edu/herbarium/prairie/turkeyfoot.html "Turkey foot grass, or Big bluestem (Andropogon gerardii)."] ''Butler University: Friesner Herbarium.'' (14 ᏅᏓᏕᏆ 2010)</ref>
 *[[Black weed|ᎬᎿᎨ]] <ref name=h231/> - ''[[Ambrosia artemisiifolia]]''
 *[[Coon root|ᎬᏟ ᎤᎿᏍᏕᏢ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
@@ -70,6 +86,7 @@
 *[[Osage tobacco|ᏌᏏ ᎤᏃᎩᏍᏗ ᎪᏍᏚᏓ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Salvia verbenaca]]'' ᎠᎴ ''[[Salvia urticifolia]]''<!--described as "wild sage." Could also be "Wajaje Hitci" or mullein--> 
 
 ==Ꮞ==
+*[[Corn|ᏎᎷ]] <ref name=h232/> - ''[[Zea mays]]''
 *[[Sage|ᏎᏥ ᏒᏟ]] <ref name=h232/> - ''[[Salvia]]''
 
 ==Ꮠ==
@@ -81,16 +98,19 @@
 *[[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]] <ref name=h232/>
 
 ==Ꮣ==
-*[[Turnips|ᏓᏈᏌᏂ]] <ref name=h232/> - ''[[Brassica rapa]]''
+*[[Apricot|ᏓᎶᏂᎨ ᎠᏓᏛᏏᎩ]] - ''[[Prunus armeniaca]]''
+*[[Turnip|ᏓᏈᏌᏂ]] ([[ᏓᏆᏌᏅ]]) <ref name=h232/> - ''[[Brassica rapa]]''
+*[[Elm|ᏓᏩᏥᎳ]] <ref name=h231/> - ''[[Ulmus]]''
 
 ==Ꮧ==
+*[[Willow|ᏗᎵᎦᎵᏍᎩ]] - ''[[Salix]]''
 *[[White root|ᏗᎵᎦᎵᏍᎩ ᎤᏍᏗᎢ]] <ref name=h232/>
 *[[Red root|ᏗᎵᎦᎵᏍᎩ ᎩᎦᎨ ᎤᎿᏍᏕᏜ]] <ref name=h232/> ᏰᎵᏊ ᏱᎩ ''[[Ceanothus Americanus]]'' <ref name=herb>[http://www.altnature.com/library/cherokee.htm "Cherokee Herbology."] ''Alternative Nature Online Herbal.'' (14 ᏅᏓᏕᏆ 2010)</ref>
 *[[Spider weed|ᏗᎾᏓᏁᏍᎩ]] <ref name=h232/>
 *[[Poison bean|ᏗᏓᏅᏕᏍᎩ]] <ref name=h232/> - ''[[Sesbania drummondii ]]''
 
-==Ꮣ==
-*[[Elm|ᏓᏩᏥᎳ]] <ref name=h231/> - ''[[Ulmus]]''
+==Ꮪ==
+*[[Peanut|ᏚᏯ ᎠᏂᎳᏗᏍᎩ]] - ''[[Arachis hypogaea]]''
 
 ==Ꮲ==
 *[[Cattail|ᏢᏓᏥ ᎦᏙᎦ]] <ref name=h231/> - ''[[Typha]]''
@@ -98,9 +118,11 @@
 
 ==Ꮵ==
 *[[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]] <ref name=h232/>
+*[[Thistle|ᏥᏥ]] - ''[[Asteraceae]]'' ᎠᎴ ''[[Cirsium vulgare]]''
+*[[Polar|ᏥᏳ ᏢᎬᎢ]] - ''[[Populus]]''
 
 ==Ꮶ==
-*[[Tobacco|ᏦᎳ]] - ''[[Nicotiana]]''
+*[[Tobacco|ᏦᎳ]] ([[ᏦᎸ]]) - ''[[Nicotiana]]''
 *[[Tobacco weed|ᏦᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Solanum mauritianum]]''
 
 ==Ꮷ==
@@ -109,6 +131,7 @@
 *[[Pin burse weed|ᏧᏂᏆᏘ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/>
 *[[Briar|ᏧᏂᏣᏲᏍᏗ]] <ref name=h231/> - ''[[Rosa]]'', ''[[Rubus]]'', ᎠᎴ ''[[Smilax]]''
 *[[Silver bur ragweed|ᏧᏅᏍᏗ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/> - ''[[Ambrosia chamissonis]]''
+*[[Maple tree|ᏧᏩᎩ]] - ''[[Acer]]''
 *[[Vain weed|ᏧᏩᏚᎾ ᏧᎳᎢ]] <ref name=h232/>
 *[[Huckleberry|ᏧᏩᏯ]] <ref name=h231/> - '[[Gaylussacia]]''
 *[[Red tulip|ᏧᏳᎮᎵᏗ]] <ref name=h232/>
