--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -50,7 +50,7 @@
 *[[Blackberry|ᎧᏁᎦᏟ]] <ref name=h231/> - ''[[Rubus]]'' spp., ''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]''
 *[[Blue grass|ᎧᏁᏍᎩᏪᏗ]] <ref name=h231/> - ''[[Poa]]'' (esp. ''[[Poa pratensis]]''
 *[[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus]] spp.''
-*[[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]] <ref name=h231/> - ᏰᎵᏊ ᏱᎩ ''[[Cassia]]'' spp. <!--''[[Senna]]'' (''[[Senna obtusifolia]]'') ᎠᎴ ''[[Lesquerella]]''rattlebox, rattlepod, bladderpod. Could possibly also be Sesbania drummondii -->
+*[[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]] <ref name=h231/> - ''[[Rumex crispus]]''<ref name=nc/>
 
 ==Ꭹ==
 *[[Bloodroot|ᎩᏟ ᎤᏩᏘ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
@@ -75,6 +75,7 @@
 *[[Moody grass|ᎽᏗ ᎦᏄᎧᎢ]] <ref name=h232/> - ''[[Cynodon dactylon]]''
 
 ==Ꮔ==
+*[[Wild ginger|ᏄᏱᎦᎳ ᏗᎾᏓᏁᏍᎩ ᎤᏔᎾ]] - <!--Big Stretch--><ref name=nc/> - ᏰᎵᏊ ᏱᎩ  ''[[Asarum]]''
 *[[Aster|ᏄᏱᎦᎵ]] <ref name=h231/> - ''[[Aster]]'' (''[[Aster subulatus]]'') 
 </div><div style="float:right; width:49%;">
 
@@ -82,7 +83,7 @@
 *[[Wild clover|ᏅᎩ ᏧᎦᏅᏓᏗ ᎦᏄᎸᎢ]] <ref name=h232/> - ''[[Trifolium]]''
 
 ==Ꮜ==
-*[[Squirrel tail|ᏌᎶᎵ ᎦᏙᎦ]] <ref name=h232/>
+*[[Squirrel tail|ᏌᎶᎵ ᎦᏙᎦ]] <ref name=h232/> - ''[[Achillea millefolium]]''<ref name=nc>[http://www.cherokee-nc.com/index.php?page=45 "Medicinal Herbs."] ''Cherokee Outdoors.'' (15 ᏅᏓᏕᏆ 2010)</ref>
 *[[Osage tobacco|ᏌᏏ ᎤᏃᎩᏍᏗ ᎪᏍᏚᏓ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Salvia verbenaca]]'' ᎠᎴ ''[[Salvia urticifolia]]''<!--described as "wild sage." Could also be "Wajaje Hitci" or mullein--> 
 
 ==Ꮞ==
@@ -117,13 +118,13 @@
 *[[Maple tree|ᏢᏩᎵᎦ]] <ref name=h232/> - ''[[Acer]]''
 
 ==Ꮵ==
-*[[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]] <ref name=h232/>
+*[[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]] <ref name=h232/> - ''[[Rosa virginiana]]''<!--What Rabbits Eat--><ref name=nc/>
 *[[Thistle|ᏥᏥ]] - ''[[Asteraceae]]'' ᎠᎴ ''[[Cirsium vulgare]]''
 *[[Polar|ᏥᏳ ᏢᎬᎢ]] - ''[[Populus]]''
 
 ==Ꮶ==
 *[[Tobacco|ᏦᎳ]] ([[ᏦᎸ]]) - ''[[Nicotiana]]''
-*[[Tobacco weed|ᏦᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Solanum mauritianum]]''
+*[[Tobacco weed|ᏦᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Verbascum]]'' <!--mullein--><ref name=nc/>
 
 ==Ꮷ==
 *[[Ash|ᏧᎦᏃᏅ]] <ref name=h231/> - ''[[Fraxinus]] spp.''
@@ -157,7 +158,7 @@
 
 ==ᏫᏓᏎᏄᎢ==
 *Howard, Gregg, ed. ''English/Cherokee Glossary''. Richardson, [[Texas|ᏅᏓᎩ]]: Various Indians Peoples Publishing, 2000. ISBN 1-884655-63-7.
-*Banks, William H., Jr. ''Plants of the Cherokee.'' Gatlinburg, [[Tennessee|ᏔᎾᏏ]]: Great Smoky Mountains Association, 2004: 62. ISBN 0-937207-43-8.
+*Banks, William H., Jr. ''Plants of the Cherokee.'' Gatlinburg, [[Tennessee|ᏔᎾᏏ]]: Great Smoky Mountains Association, 2004. ISBN 0-937207-43-8.
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 *[http://www.unl.edu/agnicpls/gpcn/index.html Historical Common Names of Great Plains Plants]
