--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -134,7 +134,7 @@
 *[[Silver bur ragweed|ᏧᏅᏍᏗ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/> - ''[[Ambrosia chamissonis]]''
 *[[Maple tree|ᏧᏩᎩ]] - ''[[Acer]]''
 *[[Vain weed|ᏧᏩᏚᎾ ᏧᎳᎢ]] <ref name=h232/>
-*[[Huckleberry|ᏧᏩᏯ]] <ref name=h231/> - '[[Gaylussacia]]''
+*[[Huckleberry|ᏧᏩᏯ]] <ref name=h231/> - ''[[Gaylussacia]]''
 *[[Red tulip|ᏧᏳᎮᎵᏗ]] <ref name=h232/>
 
 ==Ꮹ==
