--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -17,9 +17,12 @@
 * [[Thunder weed|ᎠᏴᏓᏆᏳᏍᏗ]]  <ref name=h231/>
 
 == Ꭲ ==
+* [[Cinnamon fern|ᎢᎦᎵᎤᏩᏍᎩᎵ ᎤᏍᏘᎦ]] – ''[[Osmundastrum cinnamomeum]]''<ref name=b19>Banks 19</ref>
+* [[Fragile fern|ᎢᎦᎵ ᎤᏩᏍᎩᎵ ᏃᏯᎢᎡᎢ]] – ''[[Cystopteris fragilis]]''<ref name=b20>Banks 20</ref>
+* [[Hay-scented fern|ᎢᎦᎵᎤᏰᎳᎠ]] – ''[[Dennstaedtia punctilobula]]''<ref name=b20/>
 * [[Wild gourd|ᎢᎾᎨ ᎡᎯ ᎦᏄᎸ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Cucurbitaceae marah]]''
 * [[Wild onion|ᎢᎾᎨ ᎡᎯ ᏒᎩ]] <ref name=h232/> - ''[[Allium canadense]]'' ᎠᎴ ''[[Allium vineale]]''
-* [[Snake tongue|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Nassauvia serpens]]''
+* [[Walking fern|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> ([[ᎢᎾᏚᎦᏂᎦ]], [[ᎢᎾᏓᎦᏅᎧ]] <!--Snake-tongue>--, [[ᎶᏈᏏ]]<!--star-->) – [[Asplenium rhizophyllum]] <ref>Banks 20</ref>
 * [[Hazelnut|ᎢᏩᎩᏓ]] <ref name=h231/> - ''[[Corylus]]''
 * [[Pumpkin|ᎢᏯ]] - ''[[Cucurbita pepo]]'', ''[[Cucurbita mixta]]'', ''[[Cucurbita maxima]]'', ᎠᎴ ''[[Cucurbita moschata]]''
 
@@ -32,6 +35,7 @@
 * [[Milkweed|ᎤᏅᏗ ᎠᏔᏍᎩᏍᎩ]] <ref name=h232/> - ''[[Asclepias]]''
 * [[White ball weed|ᎤᏍᏗᏝᎯ]] <ref name=h232/>
 * [[Buckeye|ᎤᏍᏆᏓ]] <ref name=h231/> - ''[[Aesculus]]''
+* [[Rattlesnake fern|ᎤᏎᎵᏘ]] – ''[[Botrypus virginianus]]''<ref name=b19/>
 * [[Beech|ᎤᏙᎳᏂ]] <ref name=h231/> - ''[[Fagus]]''
 * [[Sweet Annie weed|ᎤᏚᎾᏍᏓ]] <ref name=h231/> - ''[[Artemisia annua]]''
 * [[Dewberry|ᎤᏠᏏᏅᏓ]] <ref name=h231/> - ''[[Rubus]]'' subspecies ''[[Eubatus]]''
@@ -53,10 +57,12 @@
 * [[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]] <ref name=h231/> - ''[[Rumex crispus]]''<ref name=nc/>
 
 == Ꭹ ==
+* [[Christmas fern|ᎩᎦᎨ ᎤᏆᎫᏫᏂᏗᏧ]] <!--"red on the inside of the leaves"--> ([[ᏲᏪᎤᏤᏍᏗ]], [[ᏲᏅᎤᏤᏍᏘ]] <!--bear’s bed-->, [[ᎦᎵ]]) – ''[[Polystichum acrostichoides]]''<ref name=b21>Banks 21</ref>
 * [[Bloodroot|ᎩᏟ ᎤᏩᏘ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
 * [[Cherry|ᎩᏔᏯ]] - ''[[Prunus avium]]'' ᎠᎴ ''[[Prunus cerasus]]''
 
 == Ꭺ ==
+* [[Maidenhair fern|ᎪᎫᏍᎨᏛᎨ]] ([[ᎧᎬᏌᏍᎫᏛᎨ]]<!--It is held erect-->, [[ᎧᎫ]]) – ''[[Adiantum pedatum]]''<ref name=b19/>
 * [[Rice|ᎪᏃᎮᏅ]] - ''[[Oryza sativa]]''
 
 == Ꭻ ==
@@ -68,25 +74,42 @@
 * [[Watermelon|ᎬᎩᏍᏗ]] - ''[[Citrullus lanatus]]''
 * [[Turkey feet|ᎬᎾ ᎤᎳᏏᏕ]] <ref name=h232/> - ''[[Andropogon gerardii]]''<ref>[http://www.butler.edu/herbarium/prairie/turkeyfoot.html "Turkey foot grass, or Big bluestem (Andropogon gerardii)."] ''Butler University: Friesner Herbarium.'' (14 ᏅᏓᏕᏆ 2010)</ref>
 * [[Black weed|ᎬᎿᎨ]] <ref name=h231/> - ''[[Ambrosia artemisiifolia]]''
+* [[Arrowhead|ᎬᏁᏏ]] – ''[[Sagittaria latifolia]]''<ref name=b23>Banks 23</ref>
 * [[Coon root|ᎬᏟ ᎤᎿᏍᏕᏢ]] <ref name=h231/> - ''[[Sanguinaria canadensis]]''
 * [[Coon-tail weed|ᎬᏟ ᎦᏙᎦ]] <ref name=h231/> - ''[[Ceratophyllum demersum]]'' <!--Hornwort coon's tail-->
 
 == Ꮍ ==
 * [[Moody grass|ᎽᏗ ᎦᏄᎧᎢ]] <ref name=h232/> - ''[[Cynodon dactylon]]''
 
+==Ꮓ==
+* [[Spicewood|ᏃᏓᏥ]] - ᏰᎵᏊ ᏱᎩ ''[[Cercis canadensis]]''
+* [[Hemlock|ᏃᏄ]] – ''[[Tsuga canadensis]]''<ref>Banks 22</ref>
+* [[Pine|ᏃᏥ]] – ''[[Short leaf pine|Pinus echinata]]'', ''[[Table mountain pine|Pinus pungens]]'', ᎠᎴ  ''[[Virginia pine|Pinus virginiana]]''<ref name=p21/>
+* [[Pineapple|ᏃᏥ ᎢᏳᏍᏗ ᏒᎦᏔ]] - ''[[Ananas comosus]]''
+
 == Ꮔ ==
+* [[Potato|ᏄᏅ]] ([[ᏄᎾ]]) - ''[[Solanum tuberosum]]''
+* [[Sweet potato|ᏄᏅ ᎤᎦᎾᏍᏛ]] - ''[[Ipomoea batatas]]''
 * [[Wild ginger|ᏄᏱᎦᎳ ᏗᎾᏓᏁᏍᎩ ᎤᏔᎾ]] - <!--Big Stretch--><ref name=nc/> - ᏰᎵᏊ ᏱᎩ  ''[[Asarum]]''
 * [[Aster|ᏄᏱᎦᎵ]] <ref name=h231/> - ''[[Aster]]'' (''[[Aster subulatus]]'') 
 </div><div style="float:right; width:49%;">
 
 == Ꮕ ==
 * [[Wild clover|ᏅᎩ ᏧᎦᏅᏓᏗ ᎦᏄᎸᎢ]] <ref name=h232/> - ''[[Trifolium]]''
+* [[Sourwood|ᏅᏙᏇᏯᏈᎬᎢ]] - ''[[Oxydendrum arboreum]]''
+
+==Ꮖ==
+* [[Banana|ᏆᏁᎾ]] - ''[[Musa]]''
+* [[Plum|ᏆᏄᎾᏍᏗ]] - ''[[Prunus]]'' spp.
+* [[Peach|ᏆᏅ]] - ''[[Prunus persica]]''
 
 == Ꮜ ==
+* [[Persimmon|ᏌᎵ]] - ''[[Diospyros]]''
 * [[Squirrel tail|ᏌᎶᎵ ᎦᏙᎦ]] <ref name=h232/> - ''[[Achillea millefolium]]''<ref name=nc>[http://www.cherokee-nc.com/index.php?page=45 "Medicinal Herbs."] ''Cherokee Outdoors.'' (15 ᏅᏓᏕᏆ 2010)</ref>
 * [[Osage tobacco|ᏌᏏ ᎤᏃᎩᏍᏗ ᎪᏍᏚᏓ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Salvia verbenaca]]'' ᎠᎴ ''[[Salvia urticifolia]]''<!--described as "wild sage." Could also be "Wajaje Hitci" or mullein--> 
 
 == Ꮞ ==
+* [[Walnut|ᏎᏗ]] - ''[[Juglandaceae]]''
 * [[Corn|ᏎᎷ]] <ref name=h232/> - ''[[Zea mays]]''
 * [[Sage|ᏎᏥ ᏒᏟ]] <ref name=h232/> - ''[[Salvia]]''
 
@@ -143,6 +166,9 @@
 
 == Ꮺ ==
 * [[Horehound|ᏪᏌ ᎤᏂᎩᏍᏗ]] <ref name=h231/> - ''[[Marrubium vulgare]]''
+
+== Ᏻ ==
+* [[Wood-fern|ᏯᎾ ᎤᏤᏍᏔ]] – ''[[Dryopteris]]'' spp.<ref name=b20/>
 
 == Ᏻ ==
 * [[Honeysuckle|ᏩᎴᎳ ᎤᏂᏥᎳᎩᏍᏗ]] <ref name=h231/> - ''[[Lonicera]]''
