*Empty MediaWiki Message*

--- a/ᎠᏫᏒᏅ.mw
+++ b/ᎠᏫᏒᏅ.mw
@@ -11,12 +11,12 @@
 [[File:Parco di Castello 5.JPG|thumb|250px|ᎦᏁᎸ di Castello, ᏌᏊ  ᎯᎠ ᏬᏌᏂᏴ ᎠᎴ lyudetiyvda ᏱᏓᏟᎶᏍᏔᏅ  Italian ᎠᏫᏒᏅ, ᎭᏫᎾᏗᏢ [[Florence]], [[Italy]].]]
 [[File:Pt-ctb-jardimpaco.jpg|thumb|250px|[[Castelo Branco]], [[Portugal]].]]
 
-'''ᎠᏫᏒᏅ''' ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᏙᏯᏗᏢ, ᎠᏫᏒᏗ ᎤᏤᎵᏛ ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᏂᎨᏒ ᎢᎬᏁᏗ, ᏗᎦᎶᎪᏗ, ᎠᎴ ᎠᎵᎮᎵᏥᏓᏍᏗ [[plants|digakohidi]] ᎠᎴ ᏐᎢ ᏚᏙᏢᏒ [[nature|ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]. ᎯᎠ ᎠᏫᏒᏅ ᏰᎵᏇ ᎠᏙᏢᏗ ᎢᏧᎳ ᏂᎬᏩᏍᏛ ᎠᎴ ᎠᏍᎦᏯ-ᎪᏢᏅᎯ ᏭᏚᎸᏛ ᏗᎬᏙᏗ. ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎤᏙᏢᏒ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[residential garden|residential ᎠᏫᏒᏅ]].  ᏭᏕᎵᎬᏗᏢ ᎦᏁᎸ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏚᎳᏏᏔᏅᎩ yvwatuwidv digakohidi. [[Zoo|ᏧᏓᎴᏅᏓ ᎠᏯᏛ]], ᎦᏙ ᎤᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎨᏯᏔᎯ ᎡᎿᎢ ᎡᎥ ᎭᏫᎾᏗᏢ ᎦᎶᏄᎮᏛ ᏂᎬᏩᏍᏛ ᏗᎦᎶᎪᏗ, ᎨᏒᎩ ᏧᏩᎦᏔᏅᏍ ᎤᏯᏅᎲ ''ᎦᏁᎸ''.  ᎢᎦᏛ ᎧᏃᎮᎸᎯ ᎢᏗᎦᎪᏘ ᎧᎸᎬᎢᏗᏢ ᎦᏁᎸ, ᏯᏛᎿ ᏥᏄᏍᏗ [[Japanese rock garden|Zen ᎦᏁᎸ]], ᎬᏙᏗ digakohidi ᎠᏂᎦᏲᎵ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎾᎢ ᏂᎦᏛ. ᎠᎵᏍᏓᏴᏗ-ᎠᏛᎯᏍᏗᏍᎬ ᎦᏁᎸ ᎠᎴ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ [[farm|ᎦᎶᎨᏒ]]ᎾᎥᎢ ᎤᎾᏤᎵ ᎠᏂᎦᏲᎵ ᏗᎦᏛᏗ, ᎤᏟ ᎢᎦᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ-intensive ᎢᏗᎬᎾᏗ, ᎠᎴ ᎤᎾᏤᎵ ᎤᏰᎸᏛᎢ (ᎠᎵᎮᎵᏥᏓᏍᏗ ᎦᎵᏓᏍᏛ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎠᏛᎯᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ). ᎯᎠ [[gardening|ᏗᎦᎶᎪᏗ]] ᎤᏓᏡᎬ discusses ᎯᎠ ᏧᎾᏓᎴᎿᎢ ᎠᎴ similarities ᎠᏰᎵ ᎦᏁᎸ ᎠᎴ ᏕᎦᎶᎨᏒ ᎭᏫᎾᏗᏢ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᏍᏗᏓᏅᎢ.
+'''ᎠᏫᏒᏅ''' ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᏙᏯᏗᏢ, ᎠᏫᏒᏗ ᎤᏤᎵᏛ ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᏂᎨᏒ ᎢᎬᏁᏗ, ᏗᎦᎶᎪᏗ, ᎠᎴ ᎠᎵᎮᎵᏥᏓᏍᏗ [[plants|digakohidi]] ᎠᎴ ᏐᎢ ᏚᏙᏢᏒ [[nature|ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]. ᎯᎠ ᎠᏫᏒᏅ ᏰᎵᏇ ᎠᏙᏢᏗ ᎢᏧᎳ ᏂᎬᏩᏍᏛ ᎠᎴ ᎠᏍᎦᏯ-ᎪᏢᏅᎯ ᏭᏚᎸᏛ ᏗᎬᏙᏗ. ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎤᏙᏢᏒ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[residential garden|residential ᎠᏫᏒᏅ]].  ᏭᏕᎵᎬᏗᏢ ᎦᏁᎸ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏚᎳᏏᏔᏅᎩ ᏴᏩᎤᏫᏛ ᏗᎦᎣᎯᏗ. [[Zoo|ᏧᏓᎴᏅᏓ ᎠᏯᏛ]], ᎦᏙ ᎤᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎨᏯᏔᎯ ᎡᎿᎢ ᎡᎥ ᎭᏫᎾᏗᏢ ᎦᎶᏄᎮᏛ ᏂᎬᏩᏍᏛ ᏗᎦᎶᎪᏗ, ᎨᏒᎩ ᏧᏩᎦᏔᏅᏍ ᎤᏯᏅᎲ ''ᎦᏁᎸ''.  ᎢᎦᏛ ᎧᏃᎮᎸᎯ ᎢᏗᎦᎪᏘ ᎧᎸᎬᎢᏗᏢ ᎦᏁᎸ, ᏯᏛᎿ ᏥᏄᏍᏗ [[Japanese rock garden|Zen ᎦᏁᎸ]], ᎬᏙᏗ ᏗᎦᎣᎯᏗ ᎠᏂᎦᏲᎵ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎾᎢ ᏂᎦᏛ. ᎠᎵᏍᏓᏴᏗ-ᎠᏛᎯᏍᏗᏍᎬ ᎦᏁᎸ ᎠᎴ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ [[farm|ᎦᎶᎨᏒ]]ᎾᎥᎢ ᎤᎾᏤᎵ ᎠᏂᎦᏲᎵ ᏗᎦᏛᏗ, ᎤᏟ ᎢᎦᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ-intensive ᎢᏗᎬᎾᏗ, ᎠᎴ ᎤᎾᏤᎵ ᎤᏰᎸᏛᎢ (ᎠᎵᎮᎵᏥᏓᏍᏗ ᎦᎵᏓᏍᏛ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎠᏛᎯᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ). ᎯᎠ [[gardening|ᏗᎦᎶᎪᏗ]] ᎤᏓᏡᎬ discusses ᎯᎠ ᏧᎾᏓᎴᎿᎢ ᎠᎴ similarities ᎠᏰᎵ ᎦᏁᎸ ᎠᎴ ᏕᎦᎶᎨᏒ ᎭᏫᎾᏗᏢ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᏍᏗᏓᏅᎢ.
 
-'''[[Gardening|ᏗᎦᎶᎪᏗ]]''' ᎨᏒᎢ ᎯᎠ ᎠᎵᏂᎬᏁᏗᎢ ᎠᏛᏏᏒ ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎯᎠ ᎠᏫᏒᏅ. ᎪᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎨᏒᎢ ᎠᏍᏆᏛᎯ ᎾᎥᎢ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ [[gardener|ᏗᎦᎶᎪᏗ]]. ᏗᎦᎶᎪᏗ ᏄᎵᏂᎬᎬ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎬᏙᏗ-ᎠᏫᏒᏅ ᏗᏫᏍᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ, roadside ᎦᏁᎸ, ᎠᎴ ᏐᎢ [[public space|ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏜᏅᏛ]]. [[Landscape architecture|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎠᏓᏁᎳᏅᎯ]] ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎵᏂᎬᏁᏗᎢ ᎬᏙᏗ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ Ꭺgoweli gowlisgi ᏫᏚᏳᎪᏛ specialise ᎭᏫᎾᏗᏢ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᎴ ᏧᏠᎯᏍᏗ ᏣᎦᏘᏲᏎᎯ.
+'''[[Gardening|ᏗᎦᎶᎪᏗ]]''' ᎨᏒᎢ ᎯᎠ ᎠᎵᏂᎬᏁᏗᎢ ᎠᏛᏏᏒ ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎯᎠ ᎠᏫᏒᏅ. ᎪᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎨᏒᎢ ᎠᏍᏆᏛᎯ ᎾᎥᎢ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ [[gardener|ᏗᎦᎶᎪᏗ]]. ᏗᎦᎶᎪᏗ ᏄᎵᏂᎬᎬ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎬᏙᏗ-ᎠᏫᏒᏅ ᏗᏫᏍᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ, roadside ᎦᏁᎸ, ᎠᎴ ᏐᎢ [[public space|ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏜᏅᏛ]]. [[Landscape architecture|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎠᏓᏁᎳᏅᎯ]] ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎵᏂᎬᏁᏗᎢ ᎬᏙᏗ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪᎵᏍᎩ ᏫᏚᏳᎪᏛ specialise ᎭᏫᎾᏗᏢ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᎴ ᏧᏠᎯᏍᏗ ᏣᎦᏘᏲᏎᎯ.
 
 == ᎠᏫᏒᏅ ᎠᏛᏂᏍᏗᏍᎩ ᎠᎴ ᎠᏤᎸ ᎢᎬᏁᏗ ==
-'''ᎠᏫᏒᏅ ᎠᏛᏂᏍᏗᏍᎩ''' ᎠᎴ '''[[garden design|ᎠᏫᏒᏅ ᎠᏤᎸ ᎢᎬᏁᏗ]]''' ᎠᎾᏍᎬᏘ ᎾᏍᏋ undertaken ᎾᎥᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ. [[landscape architect|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ Ꭺgoweli gowlisgi]] ᎨᏒᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎦᎪ ᏰᎵᏇ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realise ᏙᏯᏗᏢ ᎤᏜᏅᏛ. [[garden designer|ᎠᏫᏒᏅ ᏗᏟᎶᏍᏔᏅᏍᎩ]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎨᏲᏅᎯ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realise residential ᎦᏁᎸ. 
+'''ᎠᏫᏒᏅ ᎠᏛᏂᏍᏗᏍᎩ''' ᎠᎴ '''[[garden design|ᎠᏫᏒᏅ ᎠᏤᎸ ᎢᎬᏁᏗ]]''' ᎠᎾᏍᎬᏘ ᎾᏍᏋ undertaken ᎾᎥᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ. [[landscape architect|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ ᎪᎪᏪᎵ ᎪᎵᏍᎩ ]] ᎨᏒᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎦᎪ ᏰᎵᏇ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realise ᏙᏯᏗᏢ ᎤᏜᏅᏛ. [[garden designer|ᎠᏫᏒᏅ ᏗᏟᎶᏍᏔᏅᏍᎩ]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎨᏲᏅᎯ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realise residential ᎦᏁᎸ. 
 ᎯᎠ planner ᎠᏎ ᎠᏓᏁᏗ ᏗᏓᏁᏤᏗ ᎤᎪᏗᏗ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ:
 * ᎤᏰᎸᏛᎢ
 * ᎬᏂᎨᏒ ᏄᏍᏛ ᏄᏍᏗᏓᏅ
@@ -134,7 +134,7 @@
 * [[park|ᎠᏣᏪᏐᎸᏍᏙᏗ]] ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᏙᏯᏗᏢ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᎠᏠᏯᏍᏔᏅ ('imparked') ᎠᎴ ᎡᏆᎯᎨᏍᏙᏗ ᏂᎬᎢ. [[Public park|ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ]] ᎠᎴ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎬᏙᏗ.
 * [[arboretum|ᎦᎪᏘ]] ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᏙᏯᏗᏢ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᎡᏆ, ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎠᎴ ᎠᎦᏎᏍᏙᏗ [[tree|ᏡᎬ]].
 * [[farm|ᎦᎶᎨᏒ]] ᎠᎴ [[orchard|ᏗᎦᎶᎪᏗ]] ᎨᏒᎢ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏛᎯᏍᏙᏗ [[food|ᎠᎵᏍᏓᏴᏗ]] ᎦᎶᏗ.
-* [[botanical garden|ᎠᏫᏒᏅ ᎠᏫᏒᏅ]] ᎨᏒᎢ ᏗᎦᎪᏗ ᎠᏫᏒᏅ ᎭᏢᏃ digakohidi ᎠᎴ ᎤᏛᏒ ᎢᏧᎳ ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ ᏂᏚᏰᎸᏛᎢ ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᎴ ᎥᎦᏔᎲᎢ ᎠᎾᏓᏩᏛᎯᏙᎯ.
+* [[botanical garden|ᎠᏫᏒᏅ ᎠᏫᏒᏅ]] ᎨᏒᎢ ᏗᎦᎪᏗ ᎠᏫᏒᏅ ᎭᏢᏃ ᏗᎦᎣᎯᏗ ᎠᎴ ᎤᏛᏒ ᎢᏧᎳ ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ ᏂᏚᏰᎸᏛᎢ ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᎴ ᎥᎦᏔᎲᎢ ᎠᎾᏓᏩᏛᎯᏙᎯ.
 * ᎠᏫᏒᏅ, ᎠᎴ [[zoo|ᏧᏓᎴᏅᏓ ᎠᏯᏛ]] ᎾᏍᎩᎾᎢ ᏍᏆᎳᎢ, ᎨᏒᎢ ᎾᎿᎢ ᎭᏢᏃ ᎨᏯᏔᎯ ᎡᎿᎢ ᎡᎥ ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ.
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
